# BitKey

./: INSTALL  README.md
src/: bitkey_client.cpp  gen_key.md  ssl_framework.cpp
src/lib/: CMakeLists.txt  exception.h  librootcoin.cpp  librootcoin.h  types.h
